--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -9,4 +9,13 @@
 	<%= f.password_field :password %>
 	
 	<%= f.submit 'Edit' %>
+	
+	<!-- errors -->
+	<%= form_for @user do |f| %>
+	<ul>
+		<% @user.errors.full_messages.each do |error| %>
+		<li><%= error %></li>
+		<% end %>
+	</ul>
+	<% end %>
 <% end %>
