--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -37,3 +37,12 @@
 	
 	<%= f.submit 'Create' %>
 <% end %>
+
+<!-- errors -->
+<%= form_for @user do |f| %>
+<ul>
+	<% @user.errors.full_messages.each do |error| %>
+	<li><%= error %></li>
+	<% end %>
+</ul>
+
